Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/190
  Silently ignore attempts to close a running generator, coroutine or
  asynchronous generator. This avoids spurious error messages, if such an
  object is deallocated as part of a paused, restorable tasklet.

- https://github.com/stackless-dev/stackless/issues/193
  Fix the macros PyTasklet_CheckExact(op) and PyChannel_CheckExact(op).
  Previously they contained a reference to a non existing variable.

- https://github.com/stackless-dev/stackless/issues/178
  There is a new, provisional API to write soft switchable functions in C.

- https://github.com/stackless-dev/stackless/issues/149
  The Stackless version is now "3.7".

- https://github.com/stackless-dev/stackless/issues/186
  Make Stackless compatible with subinterpreters. Previously creating a
  subinterpreter in one thread and using it in another thread caused a crash.

- https://github.com/stackless-dev/stackless/issues/182
  Fix "make teststackless" for out of tree builds.

- https://github.com/stackless-dev/stackless/issues/180
  Deprecate stackless.pickle_with_tracing_state. It has been replaced by
  stackless.pickle_flags() and stackless.pickle_flags_default().

- https://github.com/stackless-dev/stackless/issues/139
  New functions stackless.pickle_flags() and stackless.pickle_flags_default().
  They can be used to control pickling of certain objects.
  Stackless can now pickle asynchronous generators and awaitables of type
  PyAsyncGenASend or PyAsyncGenAThrow (see PEP 525).

What's New in Stackless 3.7.0a3 and 3.7.0a4
-------------------------------------------

3.7.0a4: git commit d3a65ddc, 2018-11-02
3.7.0a3: git commit df89dafa, 2018-11-02
